Closed Bug 1777890 Opened 2 years ago Closed 2 years ago

The multi-process chunk manager update logic is never started, removing the overall buffer size limit

Categories

(Core :: Gecko Profiler, defect, P2)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- wontfix
firefox102 --- wontfix
firefox103 --- wontfix
firefox104 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

Spawned from bug 1777431 comment 2:
The logic that keeps the total profile buffer memory in check is not even started! So chunk updates from child processes were ignored, and these processes are allowed to grow to their local limit, which could explain recent "big profile" issues like bug 1758643.

This was regressed in bug 1668867, patch D139333, which mistakenly removed ProfilerParentTracker::ProfilerStarted(ipcParams.entries());.

Set release status flags based on info from the regressing bug 1668867

Fix for a regression in bug 1668867, which removed this important line.
Without it, the logic that handles chunk manager updates doesn't run, and the
overall buffer size limit across processes is not enforced anymore.

To catch future regressions, the ProfileBufferGlobalController now adds its
creation timestamp to the profiling log, which can be tested.

Depends on D150562

Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/c06c7a054281 Re-enable the chunk manager logic to limit the global profile buffer memory usage - r=canaltinova
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
Regressions: 1779007
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: