Bug 1777890 - Re-enable the chunk manager logic to limit the global profile buffer memory usage - r=canaltinova

Fix for a regression in bug 1668867, which removed this important line.
Without it, the logic that handles chunk manager updates doesn't run, and the
overall buffer size limit across processes is not enforced anymore.

To catch future regressions, the ProfileBufferGlobalController now adds its
creation timestamp to the profiling log, which can be tested.

Differential Revision: https://phabricator.services.mozilla.com/D150995